--- a/src/main/webapp/config/index.htm
+++ b/src/main/webapp/config/index.htm
@@ -21,7 +21,7 @@
         <div class="easyui-accordion" id="menu_accordion" data-options="fit:true,iconCls:'fa fa-bars',border:false,title:'菜单'"></div>
     </div>
     <div class="easyui-tabs" id="main_tab" data-options="region:'center',pill:true,border:false">
-    	<div title="首页">
+    	<div title="首页" data-options="href:'${baseUrl}/data/report'">
         </div>
     </div>
 </@override>
