--- a/src/main/webapp/config/user.htm
+++ b/src/main/webapp/config/user.htm
@@ -60,6 +60,7 @@
 	    queryParams:{
 	    	pagination:1
 	    },
+	    border:false,
 	    pageSize:25,
 	    pageList:[25,50,75,100],
 	    pagination:true,
