--- a/src/main/webapp/report/job.htm
+++ b/src/main/webapp/report/job.htm
@@ -1,7 +1,7 @@
 <div id="report_job">
 	<table id="report_job_table"></table>
 	<div id="report_job_table_toolbar">
-		<input id="report_job_table_toolbar_search" name="jobSearch">
+		<input id="report_job_table_toolbar_search" name="search">
 	</div>
 </div>
 <script>
