--- a/src/main/webapp/config/index.htm
+++ b/src/main/webapp/config/index.htm
@@ -11,7 +11,7 @@
     <div id="nav_bar" data-options="region:'north',height:100,border:false">
     	<div style="padding:5px; position: absolute; bottom: 0px; right: 0px;">
 	        <a href="javascript:void(0);" class="easyui-linkbutton" data-options="plain:true,iconCls:'fa fa-bell-o fa-lg'"></a>
-	        <a href="${baseUrl}/system/signout" class="easyui-linkbutton" data-options="plain:true,iconCls:'fa fa-power-off fa-lg',text:'退出'"></a>
+	        <a href="${baseUrl}/system/signout" class="easyui-linkbutton" data-options="plain:true,iconCls:'fa fa-power-off fa-lg'"></a>
 		</div>
     </div>
     <div id="status_bar" data-options="region:'south',height:20,border:false">
@@ -21,7 +21,7 @@
         <div class="easyui-accordion" id="menu_accordion" data-options="fit:true,iconCls:'fa fa-bars',border:false,title:'菜单'"></div>
     </div>
     <div class="easyui-tabs" id="main_tab" data-options="region:'center',pill:true,border:false">
-    	<div title="首页" data-options="href:'${baseUrl}/report/index'">
+    	<div title="首页" data-options="href:'${baseUrl}/report/portal'">
         </div>
     </div>
 </@override>
