--- a/src/main/webapp/metadata/mapping.htm
+++ b/src/main/webapp/metadata/mapping.htm
@@ -6,18 +6,17 @@
          </div>
          <div data-options="region:'center',border:false" class="pd-left-10">
          	<label class="mg-bottom-5">映射表</label>
-         	<div id="data_mapping_view" class="full-screen"></div>
+         	<div id="data_mapping_view" class="full-screen border-dotted"></div>
          </div>
      </div>
 </div>
-<script type="text/javascript" src="${baseUrl}/static/lib/goofunc/gooflow.js"></script>
 <script>
 	(function(data_mapping){
 		$.ajaxSetup({
 			async:false
 		});
 		
-		LazyLoad.css(['${baseUrl}/static/lib/goofunc/gooflow.css']);
+		LazyLoad.css(['${baseUrl}/static/lib/connections/jquery.connections.css']);
 		
 		$.extend($.fn.tree.methods, {
 				getLevel:function(jq,target){
@@ -47,16 +46,6 @@
 		        });
 			}
 		});
-		
-		$.createGooFlow($("#data_mapping_view"),{
-			width:$("#data_mapping_view").width()-265,
-			height:$("#data_mapping_view").height(),
-			haveHead:false,
-			haveTool:false,
-			haveGroup:false,
-			useOperStack:false
-		});
-		
 		$('#data_mapping_view').droppable({
             onDragEnter:function(e,source){
                 $(source).draggable('options').cursor='move';
@@ -71,10 +60,32 @@
             }
         });
 		
-		$('body').on('click','.db-table i.fa-trash',function(){
-			$(this).parent('table').remove();
+		LazyLoad.js(['${baseUrl}/static/lib/connections/jquery.connections.js','${baseUrl}/static/lib/connections/jquery-timing.min.js'], function (){
+			$('body').on('click','.db-table i.fa-trash',function(){
+				$(this).parent('table').remove();
+			});
+			
+			$('html').on('dblclick','connection',function(){
+				colorLink(this,'#808080');
+				$(this).connections('remove');
+			});
+			
+			$('html').on('mouseenter','connection',function(){
+				colorLink(this,'#55f');
+			}).on('mouseleave','connection',function(){
+				colorLink(this,'#808080');
+			});
+			$.repeat().add('connection').each($).connections('update').wait(0);
 		});
 		
+		function colorLink(dom, color){
+			var data = $.data(dom,'connection');
+			$(dom).css('color',color);
+			data.node_from.css('background-color',color);
+			data.node_from.prev().css('color',color)
+			data.node_to.css('background-color',color);
+			data.node_to.prev().css('color',color)
+		}
 		function drawTable(source, position){
 			var cnodes = $('#data_mapping_guide').tree('getChildren', source);
 			if(cnodes.length > 0){
@@ -84,10 +95,10 @@
 					return;
 				}
 				var table = $('<table id="data_mapping_view_table_'+fnode.id+'" class="db-table"></table>');
-				table.append('<thead><tr><td>'+fnode.text+'</td></tr></thead>');
+				table.append('<thead><tr><td colspan="2">'+fnode.text+'</td></tr></thead>');
 				table.append('<tbody></tbody>');
 				for(var i in cnodes){
-					table.find('tbody').append('<tr><td>'+cnodes[i].text+'</td></tr>');
+					table.find('tbody').append('<tr><td id="data_mapping_view_table_'+fnode.id+'_'+cnodes[i].id+'">'+cnodes[i].text+'</td><td class="td-link"></td></tr>');
 				}
 				table.append('<i class="fa fa-trash"></i>');
 				$('#data_mapping_view').append(table);
@@ -96,8 +107,8 @@
 				    onDrag:function(e){
 						var d = e.data;
 						$('#data_mapping_view_table_'+fnode.id).attr('data-left',d.left).attr('data-top',d.top);
-			            if (d.left < 0){d.left = 0}
-			            if (d.top < 0){d.top = 0}
+			            if (d.left < 10){d.left = 10}
+			            if (d.top < 25){d.top = 25}
 			            if (d.left + $(d.target).outerWidth() > $(d.parent).width()){
 			                d.left = $(d.parent).width() - $(d.target).outerWidth();
 			            }
