--- a/src/main/webapp/layout.htm
+++ b/src/main/webapp/layout.htm
@@ -23,6 +23,7 @@
 	<script type="text/javascript" src="${baseUrl}/static/lib/easyui/jquery.min.js"></script>
 	<script type="text/javascript" src="${baseUrl}/static/lib/easyui/jquery.easyui.min.js"></script>
 	<script type="text/javascript" src="${baseUrl}/static/lib/easyui/locale/easyui-lang-zh_CN.js"></script>
+	<script type="text/javascript" src="${baseUrl}/static/lib/json2/json2.js"></script>
 	<script type="text/javascript" src="${baseUrl}/static/lib/lazyload/lazyload.js"></script>
 	<@block name="outJs"></@block>
 	<script type="text/javascript">
